Fix prod.docker-compose.yml issues

--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -24,8 +24,8 @@ services:
       ANYEX_SERVER_USERNAME: admin
       ANYEX_SERVER_PASSWORD: admin123
       ANYEX_SERVER_SECRET: 7EvrcO4jDM
-      ANYEX_SERVER_ARTICLE_MARKDOWN_SUPPORT: true
-      ANYEX_SERVER_TWEET_MARKDOWN_SUPPORT: true
+      ANYEX_SERVER_ARTICLE_MARKDOWN_SUPPORT: "true"
+      ANYEX_SERVER_TWEET_MARKDOWN_SUPPORT: "true"
       ANYEX_SERVER_DEFAULT_LIMIT: 50
     depends_on:
       - db
