--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -25,9 +25,11 @@ services:
       ANYEX_SERVER_USERNAME: admin
       ANYEX_SERVER_PASSWORD: admin123
       ANYEX_SERVER_SECRET: 7EvrcO4jDM
-      ANYEX_SERVER_ARTICLE_MARKDOWN_SUPPORT: "true"
-      ANYEX_SERVER_TWEET_MARKDOWN_SUPPORT: "true"
-      ANYEX_SERVER_DEFAULT_LIMIT: 50
+      ANYEX_SERVER_MARKDOWN_ENABLES: article,tweet
+      ANYEX_SERVER_DEFAULT_LIMIT: 50,
+      ANYEX_SERVER_MAX_LIMIT: 25,
+      ANYEX_SERVER_CORS_ORIGINS: "*"
+
     depends_on:
       - db
     restart: always
