Fix prod.docker-compose.yml bugs

--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -26,8 +26,8 @@ services:
       ANYEX_SERVER_PASSWORD: admin123
       ANYEX_SERVER_SECRET: 7EvrcO4jDM
       ANYEX_SERVER_MARKDOWN_ENABLES: article,tweet
-      ANYEX_SERVER_DEFAULT_LIMIT: 50,
-      ANYEX_SERVER_MAX_LIMIT: 25,
+      ANYEX_SERVER_DEFAULT_LIMIT: 25
+      ANYEX_SERVER_MAX_LIMIT: 50
       ANYEX_SERVER_CORS_ORIGINS: "*"
 
     depends_on:
