--- a/apps/web_server/priv/static/doc.yaml
+++ b/apps/web_server/priv/static/doc.yaml
@@ -195,7 +195,7 @@ components:
         token:
           type: string
     Admin:
-      title: 管理员
+      title: 认证
       type: object
       properties:
         username:
